Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/PackageClassAmbiguity/util.out
util.java:13:17: compiler.err.cant.resolve.location: kindname.class, Set, , , (compiler.misc.location: kindname.class, java.util, null)
util.java:16:5: compiler.err.cant.resolve.location: kindname.class, Set, , , (compiler.misc.location: kindname.class, java.util, null)
2 errors
